fixed right side whitespace

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,3 +25,12 @@
 
 // Import Custom styles
 @import "custom/avatar.scss";
+
+// Fix Right side whitespace
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
